내장 톰캣4 - 빌드와 배포1
- 빌드 & 실행
```
> ./gradlew clean buildJar
> java -jar embed-0.0.1-SNAPSHOT.jar
오류: 기본 클래스 hello.embed.EmbedTomcatSpringMain을(를) 초기화할 수 없습니다.
원인: java.lang.NoClassDefFoundError: org/springframework/web/context/WebApplicationContext
```

- jar 파일 압축해제
```
> jar -xvf embed-0.0.1-SNAPSHOT.jar
```
-> 라이브러리 역할하는 jar 파일이 없다. (jar 스펙상, jar 안에 jar 파일 위치할 수 없음.)
-> 라이브러리 경로를 어딘가 써주면 가능은 한데.. 매우 귀찮은 일...

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-//일반 Jar 생성
+//일반 Jar 생성 - 오류
 task buildJar(type: Jar) {
     manifest {
         attributes 'Main-Class': 'hello.embed.EmbedTomcatSpringMain'
